mobile web: Fix message content overlap with message options
For mobiles, the message options are not visible but when
they become visible they overlap with the message content.
The commit solves this by making the options always visible
in mobile view and giving some padding so that message
content does not overlap.

Part of #16488

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -786,6 +786,11 @@ td.pointer {
         width: 16px;
         text-align: center;
 
+        @media (max-width: 500px) {
+            opacity: 1;
+            visibility: visible;
+        }
+
         > i {
             vertical-align: middle;
         }
@@ -2880,6 +2885,7 @@ select.inline_select_topic_edit {
 
     .message_content {
         padding-right: 50px;
+        margin-top: 20px;
     }
 }
 
